<resources>
    <string name="app_name">OssProject</string>
    <string name="title_activity_maps">Oss Project</string>
    <string name="area1">Area 1</string>
    <string name="area2">Area 2</string>
    <string name="area3">Area 3</string>
    <string name="area4">Area 4</string>
    <string name="myAccount">My Account</string>
    <string name="disconnect">Disconnect</string>
    <string name="map">Map</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="action">Action</string>
    <string name="acces">Access :</string>
    <string name="Fish">Fish</string>
    <string name="type">Type : </string>
    <string name="size">Size : </string>
    <string name="curiosity">Curiosity :</string>
    <string name="presence">Presence :</string>
    <string name="title_activity_login">OssSprearfishing</string>
    <string name="around_me">Around Me (in kilometer)</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
