<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.nico.ossproject.MapsActivity" />

    <LinearLayout
        android:id="@+id/topBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/area1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/area1btn"
            android:text="@string/area1"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/area2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/area1"
            android:layout_weight="1"
            android:backgroundTint="@color/area2btn"
            android:text="@string/area2"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/area3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/area2"
            android:layout_weight="1"
            android:backgroundTint="@color/area3btn"
            android:text="@string/area3"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/area4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/area3"
            android:layout_weight="1"
            android:backgroundTint="@color/area4btn"
            android:text="@string/area4"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/around_me"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_aroundMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_search"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/colorPrimary"
            app:srcCompat="@android:drawable/ic_search_category_default" />


    </LinearLayout>

</RelativeLayout>